added security features : receive confirmation mail when signup integration JWT hashcode password